ipc/ipdl/test/ipdl/ok/managedProtocol.ipdl
include protocol "managerProtocol.ipdl";

protocol managedProtocol {
    manager managerProtocol;
    // empty
};
