ipc/ipdl/test/ipdl/error/managedNoDtor.ipdl
include protocol "managerNoDtor.ipdl";

protocol managedNoDtor {
    manager managerNoDtor;
    // empty
};
